--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,8 +3,9 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCIE = [
     {
-        title: "Soporte IT - Dia Group",
+        title: "Soporte IT",
         date: "Actualmente...",
+        company: "Dia Group",
         description:
             "Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.",
         link: "#",
@@ -12,24 +13,26 @@ const EXPERIENCIE = [
     {
         title: "Marketing UI design in Figma",
         date: "March 2022",
+        company: "Figma",
         description:
             "All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.",
     },
     {
         title: "E-Commerce UI code in Tailwind CSS",
         date: "April 2022",
+        company: "Tailwind CSS",
         description:
             "Get started with dozens of web components and interactive elements built on top of Tailwind CSS.",
     },
 ];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700 ml-3">
+<ol class="relative mt-16">
     {
         // Recorremos el array de experiencias y lo mostramos
         // con el componente ExperienceItem
         EXPERIENCIE.map((experiencie) => (
-            <li class="mb-10 ms-4">
+            <li class="">
                 <ExperienceItem {...experiencie} />
             </li>
         ))
