Actualizamos los links para el repositorio y la ruta de las imagenes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const currentYear = new Date().getFullYear();
       class="flex flex-wrap items-center mt-3 text-sm font-medium text-black dark:text-zinc-200/90"
     >
       <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <a href="/porfolio-santos/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
         <a
