--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import MailIcon from "./icons/Mail.astro";
     <div class="flex gap-4 mb-4">
         <img
             class="rounded-full shadow-lg size-16"
-            src="Santos_perfil.webp"
+            src="/porfolio-santos/Santos_perfil.webp"
             alt="Santos photo"
         />
         <a
