--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,17 +5,17 @@ const navItems = [
   {
     title: "Experiencia",
     label: "experiencia",
-    url: "/#experiencia",
+    url: "/porfolio-santos/#experiencia",
   },
   {
     title: "Proyectos",
     label: "proyectos",
-    url: "/#proyectos",
+    url: "/porfolio-santos/#proyectos",
   },
   {
     title: "Sobre mí",
     label: "sobre-mi",
-    url: "/#sobre-mi",
+    url: "/porfolio-santos/#sobre-mi",
   },
   {
     title: "Contacto",
