feat: Actualizar contenido en Aboutme, Experience, Hero y Proyects; mejorar descripciones y corregir títulos

--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -7,26 +7,15 @@
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Santos pero mis amigos me llaman coyote. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
+      Me llamo Santos pero mis amigos me llaman coyote. Desde bien pequeño me interese en el mundo del desarrollo cuando mi tio me regalo un arduino uno con el cúal empece a trastear. Actualmente estoy <strong
+        >terminando la carrera de ingeniería Informática</strong
       >.
     </p>
 
     <p>
       Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
-    </p>
-
-    <p>
-      Como creador de contenido, <strong
-        >cuento con el canal de habla hispana más visto del mundo en la
-        categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
-      >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
-      acceso a contenido de calidad.
+        >el fine-tuning del modelo t5 para que realize la traducción de lenguaje NL a instrucciones CODE-2</strong
+      >. Aunque no tenga gran potencia su desarrollo desde un pc doméstico es todo un éxito.
     </p>
   </div>
 
