--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import GithubIcon from "./icons/Github.astro";
 import MailIcon from "./icons/Mail.astro";
 ---
 
-<div class="max-w-xl">
+<div class="max-w-150">
     <div class="flex gap-4 mb-4">
         <img
             class="rounded-full shadow-lg size-16"
@@ -26,15 +26,16 @@ import MailIcon from "./icons/Mail.astro";
     <h1
         class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
     >
-        Hey, soy Santos
+        Hola, soy Santos
     </h1>
 
     <h2
-        class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+        class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300 "
     >
-        +15 años de experiencia.<strong
-            > Desarrollador web y de contenido.</strong
-        > De Alicante, España 🏟️. Especialista en crear aplicaciones únicas.
+        Estudiante de <em>Ingeniería Informática</em> y <strong>Desarrollador Front-end.</strong>
+        En constante aprendizaje y mejora de mis habilidades.
+        Soy de de Alicante, España 🏟️.
+        Especialista en crear espacios únicos.
     </h2>
 
     <nav class="flex gap-4 mt-8 flex-wrap">
