--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,26 +3,12 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCIE = [
     {
-        title: "Soporte IT",
+        title: "Soporte TIC",
         date: "Actualmente...",
         company: "Dia Group",
         description:
-            "Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.",
+            "Mantener y solucionar problemas con los sistemas tecnológicos que se utilizan para la gestión del almacén, como el software de gestión de almacén, los sistemas de identificación por radiofrecuencia (RFID) y otros dispositivos electrónicos. ",
         link: "#",
-    },
-    {
-        title: "Marketing UI design in Figma",
-        date: "March 2022",
-        company: "Figma",
-        description:
-            "All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.",
-    },
-    {
-        title: "E-Commerce UI code in Tailwind CSS",
-        date: "April 2022",
-        company: "Tailwind CSS",
-        description:
-            "Get started with dozens of web components and interactive elements built on top of Tailwind CSS.",
     },
 ];
 ---
