--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -24,9 +24,9 @@ const TAGS = {
 
 const PROYECTS = [
     {
-        title: "Test UMH - Apartado de test de la Universidad Miguel Hernández",
+        title: "Web test UMH - Apartado de test de la Universidad Miguel Hernández",
         description:
-            "Página web de test de la Universidad Miguel Hernández. En esta página se pueden realizar test de diferentes asignaturas y ver los resultados obtenidos.",
+            "En esta web se pueden realizar test de diferentes asignaturas y ver los resultados obtenidos. Con aportaciones de los alumnos.",
         link: "https://coyotemmk.github.io/test-umh.github.io/",
         github: "https://github.com/coyoteMMK/test-umh.github.io",
         image: "/porfolio-santos/proyects/Test_UMH.webp",
