--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,9 +25,9 @@ const navItems = [
 ];
 ---
 
-<header class="header-nav top-0 z-10 fixed flex items-center justify-end w-full py-2">
-  <div class="flex items-center justify-between w-full mx-auto lg:max-w-4xl md:max-w-2xl text-sm font-medium text-gray-600 dark:text-gray-200 j">
-    <a class="font-normal text-lg text-gray-600 dark:text-gray-100 px-2 py-2 transition hover:text-blue-500 dark:hover:text-blue-500" href="#"
+<header class="header-nav top-0 z-10 fixed flex items-center justify-end w-full py-1 md:py-2">
+  <div class="flex items-center justify-center w-full mx-auto lg:max-w-4xl md:max-w-2xl text-sm font-medium text-gray-600 dark:text-gray-200 md:justify-between">
+    <a class="font-normal text-lg text-gray-600 dark:text-gray-100 px-2 py-2 transition hover:text-blue-500 dark:hover:text-blue-500 hidden md:block" href="#" 
       ><strong>Portfolio</strong> Santos
       
       </a
