feat: Agregar nuevas dependencias y mejorar componentes; incluir @preline/scrollspy, actualizar experiencia y proyectos, y optimizar estilos de navegación

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -10,6 +10,31 @@ const EXPERIENCIE = [
             "Mantener y solucionar problemas con los sistemas tecnológicos que se utilizan para la gestión del almacén, como el software de gestión de almacén, los sistemas de identificación por radiofrecuencia (RFID) y otros dispositivos electrónicos. ",
         link: "#",
     },
+    {
+        title: "Prácticas de Soporte TI",
+        date: "Julio 2024 - Septiembre 2024",
+        company: "Dia Group",
+        description:
+            "Colaborar en la implementación y mantenimiento de sistemas tecnológicos utilizados en el almacén, como software de gestión de inventario, sistemas de identificación por radiofrecuencia (RFID) y otros dispositivos electrónicos. Aprender a solucionar problemas técnicos y brindar soporte a los usuarios.",
+        link: "#",
+    },
+    {
+        title: "Investigador de IA",
+        date: "2023-2024",
+        company: "UMH - Universidad Miguel Hernández",
+        description:
+            "Desarrollar un sistema de IA para la detección de anomalías en el tráfico de red, utilizando técnicas de aprendizaje automático y análisis de datos. Implementar un modelo de IA capaz de identificar patrones inusuales en el tráfico de red y generar alertas en tiempo real.",
+        link: "www.umh.es",
+    },
+     {
+        title: "Investigador de IA",
+        date: "2023-2024",
+        company: "UMH - Universidad Miguel Hernández",
+        description:
+            "Desarrollar un sistema de IA para la detección de anomalías en el tráfico de red, utilizando técnicas de aprendizaje automático y análisis de datos. Implementar un modelo de IA capaz de identificar patrones inusuales en el tráfico de red y generar alertas en tiempo real.",
+        link: "www.umh.es",
+    },
+
 ];
 ---
 
